prevent nullptr dereferentiation

BUG: 357032
FIXED-IN: 5.6
REVIEW: 126787